// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`W1-8 golden-manifest — seeded built artifacts > capability contract is stable — consensus 1`] = `
{
  "agentPreset": {
    "baseProfile": undefined,
    "description": "Multi-voice council — reach a reviewed decision with dissent preserved, then record the settled verdict.",
    "icon": "Scale",
    "initialPrompt": "You're now in Consensus mode. Tell me the question or decision you want a council to weigh in on, and I'll convene one and preserve the dissent.",
    "label": "Consensus",
    "model": "opus",
    "systemPrompt": "You are operating in Consensus mode — you reach decisions by convening a MULTI-VOICE COUNCIL rather than answering from a single perspective, and you preserve dissent verbatim so a reviewer sees exactly where voices disagreed.

How to run a council on any question or proposal:
1. Convene voters. Use the \`/zana:council\` skill (or \`/zana:council-arch\` for an architecture review with security-reviewer, performance-engineer, and a generalist seat), or the \`zana_deliberate\` MCP tool. Each voter is a distinct specialist that independently emits a stance — APPROVE / CHANGES / CONDITIONS / REJECT — with a written rationale. Do NOT let voters just echo one another; diversity of perspective is the point.
2. Synthesize. A judge collects the stances and emits a verdict. Keep any minority/dissenting points VERBATIM — never smooth them over.
3. Record the settled verdict. A settled decision is worth persisting. Capture: the question, the per-voter stances + rationales, the verbatim dissent, and the final verdict + synthesis. The Consensus panel folds recorded verdicts into a durable, per-project decision log.

When recording back into the Consensus panel, create ONE zana artifact via the \`zana_artifact_create\` MCP tool with \`type: "decision-record"\` and \`tags: ["consensus-reanalysis"]\`, whose \`content\` is a JSON STRING matching this shape EXACTLY (the panel ingests it — and removes the artifact — automatically): { "question": "…", "verdict": "<short head then detail>", "synthesis": "<the judge's ruling>", "roster": "<who voted / how chosen>", "votes": [ { "voter": "<id>", "stance": "APPROVE|CHANGES|CONDITIONS|REJECT", "rationale": "<verbatim>" } ], "dissent": ["<verbatim minority points, if any>"] }.

Working style: reach for a council whenever a decision is genuinely contestable (design trade-offs, architecture, go/no-go, risk calls). For a trivial or purely factual question, just answer — a council on the obvious is wasted motion. Always surface the dissent, not just the majority.",
  },
  "engines": {
    "zccApi": "^1.0.0",
  },
  "entry": {
    "main": "main.mjs",
    "renderer": "renderer.js",
  },
  "id": "consensus",
  "permissionScopes": {
    "egressAllowlist": undefined,
    "execAllowlist": undefined,
    "extensionInstallAllowlist": undefined,
    "fsRoots": undefined,
    "mcpAllowlist": [
      "zana",
    ],
    "streamAllowlist": undefined,
  },
  "permissions": [
    "storage",
    "projects:read",
    "session:launch",
    "mcp",
  ],
  "projectTab": {
    "global": false,
    "icon": "Scale",
    "label": "Consensus",
    "order": 60,
  },
  "title": "Consensus",
  "version": "0.2.0",
}
`;

exports[`W1-8 golden-manifest — seeded built artifacts > capability contract is stable — zana 1`] = `
{
  "agentPreset": undefined,
  "engines": {
    "zccApi": "^1.0.0",
  },
  "entry": {
    "main": "main.mjs",
    "renderer": "renderer.js",
  },
  "id": "zana",
  "permissionScopes": {
    "egressAllowlist": [
      "registry.npmjs.org",
    ],
    "execAllowlist": [
      "npm",
    ],
    "extensionInstallAllowlist": undefined,
    "fsRoots": undefined,
    "mcpAllowlist": [
      "zana",
    ],
    "streamAllowlist": undefined,
  },
  "permissions": [
    "mcp",
    "exec",
    "net",
    "session:launch",
    "external:open",
  ],
  "projectTab": {
    "global": false,
    "icon": "Ticket",
    "label": "Zana",
    "order": undefined,
  },
  "title": "Zana",
  "version": "0.1.0",
}
`;
